[ci skip] Round quantile regression evaluation metrics 8403843479c8cf72f783caeb865e71888650e5c3

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4d7ceb5",
+   "id": "71db0d3e",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e4a612",
+   "id": "dffaa7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc3db4a",
+   "id": "e8bfdda1",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07575957",
+   "id": "06e55d71",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "454906f8",
+   "id": "f3b6491d",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a04fa8c",
+   "id": "28864df5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b286a0b",
+   "id": "6026bdbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62177c2",
+   "id": "bf13ebe0",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1adc2d63",
+   "id": "a9e45d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc23407f",
+   "id": "9cf7a833",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bb70293",
+   "id": "f1be6b5d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38839de2",
+   "id": "bf037d05",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d63bdf1a",
+   "id": "35223cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4333b7e6",
+   "id": "def89af3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f08b86d",
+   "id": "28f7d71b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ca0cda",
+   "id": "7548391e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8dff88f",
+   "id": "4fce94ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e9f2ea",
+   "id": "b1e6d525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "689df5e7",
+   "id": "304341b6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7624ce60",
+   "id": "85e0c64a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1538ea",
+   "id": "02c185ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d24f513",
+   "id": "b4f0cf7c",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42182a2a",
+   "id": "cb797acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de889ad9",
+   "id": "0b42ca64",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad7cbe93",
+   "id": "06542ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9fe679a",
+   "id": "40524740",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e81626c",
+   "id": "bb228b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8969168d",
+   "id": "2c7cfd96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0b5f70",
+   "id": "bb57e772",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "803a95af",
+   "id": "e0a8fc62",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d8ed706",
+   "id": "1c02708d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb3314be",
+   "id": "3be442f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ddb7f9",
+   "id": "7612e7c1",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d2b0b95",
+   "id": "f5fa2da1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19bc944c",
+   "id": "d1a32507",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c1c53b2",
+   "id": "475f8e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfee6375",
+   "id": "e42239ec",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2455a3b",
+   "id": "79c4692e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed8cdb9",
+   "id": "b79fb2fa",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "819dd267",
+   "id": "00d3e621",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7c9602",
+   "id": "c5133561",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be498ca2",
+   "id": "66773317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6328079",
+   "id": "0c819d5d",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e2b480",
+   "id": "998e7f73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a25ba16",
+   "id": "e654effa",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d255d21",
+   "id": "b38d3280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747dd69c",
+   "id": "bdde3598",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95b8002e",
+   "id": "9995c4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34846486",
+   "id": "1e45ccee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708daee3",
+   "id": "4af81c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04744f40",
+   "id": "0c531925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a518d30d",
+   "id": "7aed4bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b851a6d",
+   "id": "d2999118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0d848cf",
+   "id": "f06c59a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f2ea2d6",
+   "id": "b68883ba",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371dd2d1",
+   "id": "5851a071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fb2d2c",
+   "id": "41712e89",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "495c804c",
+   "id": "2035f8e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0790e1d8",
+   "id": "41cf52fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb79e84",
+   "id": "693a2a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ea4f2d",
+   "id": "1ee349a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edcfd17a",
+   "id": "777c59ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec947a0b",
+   "id": "d76a961b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7137ead8",
+   "id": "9926dc6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ada2c74",
+   "id": "c5cc587b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac1f73f",
+   "id": "da0940c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cdb6c57",
+   "id": "65b36872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa412d42",
+   "id": "eb57fed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee3ca83",
+   "id": "e811d651",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3cb4434",
+   "id": "b36a1cc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ac1f89",
+   "id": "dad05006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb43cf6",
+   "id": "c64e9814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7a53da",
+   "id": "e7be863a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf2a4db",
+   "id": "1fb09759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28fea69",
+   "id": "fae1aec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58f60bf",
+   "id": "87f52ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d0a639",
+   "id": "dcfdf115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64062f03",
+   "id": "999fcc25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0612ff66",
+   "id": "a8d36f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "275c8871",
+   "id": "06903feb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be89657",
+   "id": "da5f22af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e711570a",
+   "id": "08d18e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c857e3",
+   "id": "f503476f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a25d0ad",
+   "id": "af00b6b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6140665e",
+   "id": "65c3eb6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cee1f271",
+   "id": "0fe0e48f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b116c5",
+   "id": "8a587869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a396e5",
+   "id": "9f38d74b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c692456c",
+   "id": "a96258dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0784a15f",
+   "id": "bfe5b3b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f3fc42",
+   "id": "484f3dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d88aac8",
+   "id": "1b2f7ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f381b438",
+   "id": "0ebfbbe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6804241b",
+   "id": "bdabc1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84a8942",
+   "id": "8ffc9e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2282,7 @@
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
     "    return float(\n",
-    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()\n",
+    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean().round(4)\n",
     "    )\n",
     "\n",
     "\n",
@@ -2290,13 +2290,13 @@
     "    y_true = np.asarray(y_true)\n",
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
-    "    return float(np.abs(y_quantile_high - y_quantile_low).mean())"
+    "    return float(np.abs(y_quantile_high - y_quantile_low).mean().round(1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d72b2135",
+   "id": "698b2427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d498a7",
+   "id": "5853ff14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d90270a",
+   "id": "e003c35d",
    "metadata": {},
    "outputs": [],
    "source": []
