--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "167a580f",
+   "id": "636eb749",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2800bec2",
+   "id": "72e4c1c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c59f5a0",
+   "id": "590951aa",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4828b413",
+   "id": "73de6acc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4bac82d",
+   "id": "966b9074",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f98a88b",
+   "id": "10d4f22a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c80139",
+   "id": "0aef310c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be2775b",
+   "id": "663d3c9e",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a95478",
+   "id": "66de3d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b4e2cdb",
+   "id": "13a84934",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da3a8dfe",
+   "id": "2eff8880",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a56320",
+   "id": "c6922e4e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67386a5",
+   "id": "6a51ebf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a366cb98",
+   "id": "c8bc84f9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64af6e85",
+   "id": "15d8f198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4231ec7a",
+   "id": "347a0e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44878ed5",
+   "id": "0c548a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ec2ed7",
+   "id": "90c7dde3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af8951e",
+   "id": "81d25a31",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bbc67c",
+   "id": "775afe33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "873c1418",
+   "id": "9b15ea75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6939eb",
+   "id": "eb07c868",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e75572",
+   "id": "e8918b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1addc340",
+   "id": "9e7dbc18",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa7df2f",
+   "id": "91ffdbfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7cab93c",
+   "id": "1716b541",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94c29820",
+   "id": "cbfd2ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e73926",
+   "id": "9a424b8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696c0683",
+   "id": "f9391ebb",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d02962",
+   "id": "9d5d7153",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f5c6d71",
+   "id": "c4721962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e07d227",
+   "id": "bad28cf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91886cdf",
+   "id": "5319a576",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ede3030",
+   "id": "2b331c78",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2171234b",
+   "id": "58b65b6b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a11cd4",
+   "id": "f55755a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "221b65d3",
+   "id": "768801ec",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdeb16a3",
+   "id": "b38d12f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c691961c",
+   "id": "fa23decb",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87378458",
+   "id": "25c2ed3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5621da6d",
+   "id": "f6f3c972",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c71c73a",
+   "id": "5c080b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3da3636",
+   "id": "f4074e51",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778cec4f",
+   "id": "fb5b30b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e887953",
+   "id": "f62528ad",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18502aeb",
+   "id": "5057fafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4504c1a",
+   "id": "8ef5c3ef",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b342be",
+   "id": "6fa11087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605acba9",
+   "id": "be061fbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe1eb89a",
+   "id": "ae5716ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb2e0300",
+   "id": "463154ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99060d1e",
+   "id": "750e5342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68a09bf",
+   "id": "04bb89ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020f9a87",
+   "id": "e3e61bdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dea3260",
+   "id": "60c048a4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb3d80a3",
+   "id": "fd707ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8551965",
+   "id": "f1a9552f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fcdc163",
+   "id": "4c1f7d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e7aa1d",
+   "id": "f16c3b34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c6752f",
+   "id": "035579c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be04980c",
+   "id": "65e74d30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f1ceab",
+   "id": "4e4f6999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820adbae",
+   "id": "dd7702ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c79e7cdb",
+   "id": "66c5aace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b663b59",
+   "id": "d9bdf264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd430a08",
+   "id": "403750df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b000eefe",
+   "id": "491e0eb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affb19e3",
+   "id": "13e26eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02bd61a9",
+   "id": "1e095370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6efa54e",
+   "id": "ddce725e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2153f23",
+   "id": "b47d2b7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c0a2f99",
+   "id": "80237766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bed7b1d",
+   "id": "d5320808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c12a4e85",
+   "id": "629d1b92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb4fe3d",
+   "id": "67c396a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3c391c",
+   "id": "7c383248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c939e46e",
+   "id": "5dc7fd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fef50f4",
+   "id": "2c3ddca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f95593",
+   "id": "f43a149f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c3a698",
+   "id": "37b8c534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d719340e",
+   "id": "64dfddd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb10c85",
+   "id": "b732e6ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f94df114",
+   "id": "88c7ff7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695b4ad0",
+   "id": "0a28e15c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89e5a76",
+   "id": "a4fcf3b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db67a178",
+   "id": "b5f19f48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bba63da",
+   "id": "012bc043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44f66ae",
+   "id": "e421050d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e154f30b",
+   "id": "5bb9bcfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec21cd6",
+   "id": "7663c5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f681379c",
+   "id": "d1aba506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e7f2f7",
+   "id": "e0db8353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "842e3f33",
+   "id": "039fff6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85482c89",
+   "id": "48aeb6b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e7db8d",
+   "id": "024d4909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2282,7 @@
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
     "    return float(\n",
-    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()\n",
+    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean().round(4)\n",
     "    )\n",
     "\n",
     "\n",
@@ -2290,13 +2290,13 @@
     "    y_true = np.asarray(y_true)\n",
     "    y_quantile_low = np.asarray(y_quantile_low)\n",
     "    y_quantile_high = np.asarray(y_quantile_high)\n",
-    "    return float(np.abs(y_quantile_high - y_quantile_low).mean())"
+    "    return float(np.abs(y_quantile_high - y_quantile_low).mean().round(1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1b60402",
+   "id": "22f31a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d232d1d",
+   "id": "e3e62da1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d74d3f",
+   "id": "88bf88f9",
    "metadata": {},
    "outputs": [],
    "source": []
